--- a/app/src/main/res/layout/activity_manu.xml
+++ b/app/src/main/res/layout/activity_manu.xml
@@ -7,9 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".ManuActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="MenuActivity"
-        android:textSize="20sp"/>
+    <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <GridView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:verticalSpacing="5dp"
+            android:horizontalSpacing="5dp"
+            android:id="@+id/menu_grid_view"
+            android:layout_above="@id/menu_button_select"
+            android:scrollbars="vertical">
+
+        </GridView>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:text="@string/wybierz"
+            android:id="@+id/menu_button_select"
+            />
+
+    </RelativeLayout>
+
+
 </android.support.constraint.ConstraintLayout>
