black images, black text for grid item

--- a/app/src/main/res/layout/grid_menu_item.xml
+++ b/app/src/main/res/layout/grid_menu_item.xml
@@ -27,6 +27,7 @@
         android:textSize="25sp"
         android:text="ZADZWON"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:paddingTop="10dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
