--- a/app/src/main/res/layout/activity_messager_list.xml
+++ b/app/src/main/res/layout/activity_messager_list.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".smsActivitys.MessagerActivity">
+    tools:context=".smsActivitys.MessagerListActivity">
 
 </android.support.constraint.ConstraintLayout>
