--- a/app/src/main/res/layout/activity_messager_list.xml
+++ b/app/src/main/res/layout/activity_messager_list.xml
@@ -4,6 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".smsActivitys.MessagerListActivity">
+    tools:context=".smsActivitys.MessagerListActivity"
+    android:id="@+id/sms_background">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:numColumns="2"
+            android:verticalSpacing="5dp"
+            android:horizontalSpacing="5dp"
+            android:id="@+id/sms_recycler_view"
+            android:layout_above="@id/sms_buttons_layout"
+            android:scrollbars="vertical">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:id="@+id/sms_buttons_layout"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            >
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:textSize="30dp"
+                android:layout_marginRight="2.5dp"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                android:text="@string/wybierz"
+                android:id="@+id/sms_button_select"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="2.5dp"
+                android:layout_marginRight="5dp"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:text="@string/newS"
+                android:background="@color/green"
+                android:id="@+id/sms_button_delete"
+                />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
