--- a/app/src/main/res/layout/activity_messager.xml
+++ b/app/src/main/res/layout/activity_messager.xml
@@ -4,6 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".smsActivitys.MessagerActivity">
+    tools:context=".smsActivitys.MessagerActivity"
+    android:id="@+id/messager_background">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/messager_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
 </android.support.constraint.ConstraintLayout>
