--- a/app/src/main/res/layout/activity_new_sms.xml
+++ b/app/src/main/res/layout/activity_new_sms.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".smsActivitys.NewSmsActivity"
-    android:layout_marginLeft="8dp"
-
-    android:layout_marginRight="8dp">
+    tools:context=".smsActivitys.NewSmsActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,21 +16,21 @@
             android:layout_height="wrap_content"
             android:weightSum="6"
             android:minHeight="50dp"
-            android:maxHeight="100dp"
+            android:maxHeight="80dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="5"
                 android:textSize="20dp"
                 android:text="nowy odbiorca\nnowy odbiorca 2\nNowy odbiorca 3"
                 android:minHeight="50dp"
-                android:maxHeight="100dp"/>
+                android:maxHeight="80dp"/>
 
             <Button
                 android:layout_width="150dp"
-                android:layout_height="80dp"
+                android:layout_height="match_parent"
                 android:textSize="20dp"
                 android:layout_weight="1"
                 android:text="@string/newReceiver"
@@ -42,12 +39,21 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="200dp" />
+            android:layout_height="200dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"/>
 
-        <!--<android.inputmethodservice.KeyboardView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--/>-->
+        <android.inputmethodservice.KeyboardView
+            android:id="@+id/keyboardview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:labelTextSize="35sp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:visibility="visible"
+            />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
