--- a/app/src/main/res/layout/activity_choose_or_write_number.xml
+++ b/app/src/main/res/layout/activity_choose_or_write_number.xml
@@ -15,7 +15,7 @@
         android:background="#FFFF8D"
         android:gravity="center"
         android:layout_marginBottom="5dp"
-        android:id="@+id/go_to_contact">
+        android:id="@+id/add_contact">
 
         <TextView
             android:id="@+id/textContact"
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textSize="33dp"
-            android:text="@string/choose_from_contact" />
+            android:text="@string/add_contact" />
     </LinearLayout>
 
     <LinearLayout
@@ -33,16 +33,37 @@
         android:orientation="vertical"
         android:background="#F4FF81"
         android:gravity="center"
-        android:id="@+id/go_to_numeric_keyboard"
+        android:id="@+id/go_to_contact"
+        android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp">
 
             <TextView
-                android:id="@+id/textNumberKeyboard"
+                android:id="@+id/choose_number"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="33dp"
-                android:text="@string/write_number" />
+                android:text="@string/choose_from_contact" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/go_to_numeric_keyboard"
+        android:layout_width="match_parent"
+        android:layout_height="190dp"
+        android:layout_marginTop="5dp"
+        android:layout_weight="1"
+        android:background="#F4FF81"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textNumberKeyboard"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/write_number"
+            android:textSize="33dp" />
+    </LinearLayout>
+
 
 </LinearLayout>
