--- a/app/src/main/res/layout/activity_contact_type.xml
+++ b/app/src/main/res/layout/activity_contact_type.xml
@@ -1,76 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Contacts.ContactTypeActivity">
+
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="2"
-        android:padding="10dp">
+        android:weightSum="3"
+        android:padding="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
-        <LinearLayout
+        <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
+            android:layout_marginBottom="10dp"
             android:background="#FFFF8D"
-            android:gravity="center"
-            android:layout_marginBottom="5dp"
-            android:id="@+id/add_contact">
+            android:text="@string/add_contact"
+            android:textSize="25dp"
+            android:textStyle="bold"/>
 
-            <TextView
-                android:id="@+id/textContact"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="33dp"
-                android:text="@string/add_contact" />
-        </LinearLayout>
-
-        <LinearLayout
+        <Button
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="vertical"
-            android:background="#F4FF81"
-            android:gravity="center"
-            android:id="@+id/go_to_contact"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="#FFFF8D"
+            android:text="@string/choose_from_contact"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            />
 
-            <TextView
-                android:id="@+id/choose_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:textSize="33dp"
-                android:text="@string/choose_from_contact" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/go_to_numeric_keyboard"
+        <Button
             android:layout_width="match_parent"
-            android:layout_height="190dp"
-            android:layout_marginTop="5dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#F4FF81"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textNumberKeyboard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/write_number"
-                android:textSize="33dp" />
-        </LinearLayout>
-
+            android:layout_marginTop="10dp"
+            android:background="#FFFF8D"
+            android:text="@string/write_number"
+            android:textSize="25dp"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
