--- a/app/src/main/res/layout/activity_contact_type.xml
+++ b/app/src/main/res/layout/activity_contact_type.xml
@@ -39,6 +39,7 @@
             android:text="@string/choose_from_contact"
             android:textSize="25dp"
             android:textStyle="bold"
+            android:id="@+id/go_to_contact"
             />
 
         <Button
