open default view to write and call

--- a/app/src/main/res/layout/activity_contact_type.xml
+++ b/app/src/main/res/layout/activity_contact_type.xml
@@ -50,6 +50,7 @@
             android:background="#FFFF8D"
             android:text="@string/write_number"
             android:textSize="25dp"
+            android:id="@+id/call_at_number"
             android:textStyle="bold"/>
 
     </LinearLayout>
