linki dzialajace funkcje

--- a/app/src/main/res/layout/activity_add_link.xml
+++ b/app/src/main/res/layout/activity_add_link.xml
@@ -15,11 +15,11 @@
 
         <EditText
             android:id="@+id/nazwaLinku"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="88dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -28,11 +28,11 @@
 
         <EditText
             android:id="@+id/urlL"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
+
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="196dp"
             android:ems="10"
             android:inputType="textPersonName"
@@ -41,8 +41,9 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -56,8 +57,9 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
