--- a/app/src/main/res/layout/activity_links.xml
+++ b/app/src/main/res/layout/activity_links.xml
@@ -45,6 +45,7 @@
             android:layout_marginRight="50dp"
             android:layout_marginBottom="0dp"
             android:text="@string/usun"
+            android:onClick="deleteLink"
             android:textSize="30dp"
             android:textStyle="bold" />
 
