Revert "Contacts add new, edit(not work yet) and delete .idea"

--- a/app/src/main/res/layout/activity_list_contact.xml
+++ b/app/src/main/res/layout/activity_list_contact.xml
@@ -31,38 +31,36 @@
             android:layout_height="80dp"
             android:id="@+id/contact_buttons_layout"
             android:orientation="horizontal"
-            android:weightSum="3"
+            android:weightSum="2"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             >
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:textSize="30dp"
+                android:layout_marginRight="2.5dp"
+                android:layout_marginLeft="5dp"
+                android:textStyle="bold"
+                android:text="@string/wybierz"
+                android:id="@+id/contact_button_select"
+                />
 
             <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:layout_marginLeft="2.5dp"
+                android:layout_marginRight="5dp"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                android:text="@string/newS"
+                android:background="@color/green"
                 android:id="@+id/contact_button_delete"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:text="@string/delete_contact"
-                android:textSize="20sp"
-                android:textStyle="bold" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/edit"
-                android:id="@+id/contact_button_edit" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:text="@string/call_to_contact_number"
-                android:id="@+id/contact_button_call" />
+                />
         </LinearLayout>
+
 
     </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
