--- a/app/src/main/res/layout/activity_contact_type.xml
+++ b/app/src/main/res/layout/activity_contact_type.xml
@@ -27,9 +27,7 @@
             android:background="#FFFF8D"
             android:text="@string/add_contact"
             android:textSize="25dp"
-            android:textStyle="bold"
-            android:id="@+id/go_to_new_number_activity"
-            />
+            android:textStyle="bold"/>
 
         <Button
             android:layout_width="match_parent"
