--- a/app/src/main/res/layout/listview_links_item.xml
+++ b/app/src/main/res/layout/listview_links_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="83dp"
         android:textSize="30dp"
-
+        android:background="#fffdd0"
         android:paddingLeft="6dip"
         android:paddingRight="6dip"
         android:gravity="center"/>
