--- a/app/src/main/res/layout/sms_person_list_cell.xml
+++ b/app/src/main/res/layout/sms_person_list_cell.xml
@@ -1,41 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
-    android:id="@+id/sms_person_list_cell">
+    android:id="@+id/sms_person_list_cell"
+    >
 
-    <LinearLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/sms_cell_background"
+        app:cardCornerRadius="4dp"
+        android:layout_gravity="center_horizontal"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="true"
+        app:cardElevation="5dp"
         >
 
-        <TextView
-            android:id="@+id/sms_person_name"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Imie Nazwisko"
-            android:textColor="@color/black"
-            android:textSize="28sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/sms_last_sms_data"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:singleLine="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="Przykładowy fragment wiadomości odebranej od osoby o imieniu i nazwisko"
-            android:textSize="24sp"
-             />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:id="@+id/sms_cell_background"
+            android:background="#EDE7F6">
+
+            <TextView
+                android:id="@+id/sms_person_name"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Imie Nazwisko"
+                android:textColor="@color/black"
+                android:textSize="28sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/sms_last_sms_data"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:textColor="@color/black"
+                android:singleLine="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="Przykładowy fragment wiadomości odebranej od osoby o imieniu i nazwisko"
+                android:textSize="24sp"
+                />
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+
 </RelativeLayout>
