--- a/app/src/main/res/layout/top_toolbar.xml
+++ b/app/src/main/res/layout/top_toolbar.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:minHeight="?attr/actionBarSize"
     android:id="@+id/customToolbar"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/top_shape"
     android:contentInsetLeft="0dp"
     android:contentInsetStart="0dp"
     app:contentInsetLeft="0dp"
