sending sms, checking contact to sms

--- a/app/src/main/res/layout/activity_new_sms.xml
+++ b/app/src/main/res/layout/activity_new_sms.xml
@@ -21,14 +21,19 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="80dp"
                 android:layout_weight="5"
+                android:gravity="bottom"
                 android:textSize="20dp"
-                android:text="nowy odbiorca\nnowy odbiorca 2\nNowy odbiorca 3"
-                android:minHeight="50dp"
-                android:maxHeight="80dp"/>
+                android:text="nowy odbiorca\nnowy odbiorca 2"
+                android:minHeight="25dp"
+                android:maxHeight="80dp"
+                android:id="@+id/new_sms_contacts"
+                android:textColor="@color/black"
+                android:scrollbars="vertical"/>
 
             <Button
+                android:id="@+id/new_sms_addContact"
                 android:layout_width="150dp"
                 android:layout_height="match_parent"
                 android:textSize="20dp"
@@ -37,23 +42,26 @@
                 />
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
-
-        <android.inputmethodservice.KeyboardView
-            android:id="@+id/keyboardview"
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:labelTextSize="35sp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:visibility="visible"
-            />
+            android:maxHeight="200dp"
+            android:minWidth="50dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:id="@+id/new_sms_msg"/>
+
+        <!--<android.inputmethodservice.KeyboardView-->
+            <!--android:id="@+id/keyboardview"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:layout_centerHorizontal="true"-->
+            <!--android:labelTextSize="35sp"-->
+            <!--android:focusable="true"-->
+            <!--android:focusableInTouchMode="true"-->
+            <!--android:visibility="visible"-->
+            <!--/>-->
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
