--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="white">#FFFFFF</color>
     <color name="crem">#fffdd0</color>
     <color name="green">#33cc33</color>
-    <color name="red">#ff471a</color>
+    <color name="red">#FF0000</color>
     <color name="transparent">#80000000</color>
 </resources>
