--- a/app/src/main/res/layout/activity_list_contact.xml
+++ b/app/src/main/res/layout/activity_list_contact.xml
@@ -62,6 +62,16 @@
                 android:textStyle="bold"
                 android:text="@string/call_to_contact_number"
                 android:id="@+id/contact_button_call" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="3"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="@string/wybierz"
+                android:id="@+id/contact_button_choose"
+                android:visibility="gone"/>
         </LinearLayout>
 
     </RelativeLayout>
