--- a/app/src/main/res/layout/fragment_autocomplete_address.xml
+++ b/app/src/main/res/layout/fragment_autocomplete_address.xml
@@ -5,9 +5,14 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".Navigation.AddAddressActivity">
-<fragment
-    android:id="@+id/place_autocomplete_fragment"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
+
+
+
+        <fragment
+            android:id="@+id/place_autocomplete_fragment"
+            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+
 </LinearLayout>
