--- a/app/src/main/res/layout/navigation_list_item.xml
+++ b/app/src/main/res/layout/navigation_list_item.xml
@@ -1,18 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical" android:layout_width="match_parent"
-android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="vertical"
+    android:id="@+id/navigation_list_item">
 
-    <TextView
-        android:id="@+id/place_title"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="83dp"
-        android:textSize="30dp"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:id="@+id/navigation_item_background"
+        >
 
-    <TextView
-        android:id="@+id/place_address"
-        android:layout_width="match_parent"
-        android:layout_height="83dp"
-        android:textSize="30dp"/>
+        <TextView
+            android:id="@+id/navigation_title"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:text="Adres miejsca"
+            android:textColor="@color/black"
+            android:textSize="28sp"
+            android:textStyle="bold" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/navigation_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:singleLine="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:text="Adres"
+            android:textSize="26sp"
+            />
+
+    </LinearLayout>
+
+</RelativeLayout>
