--- a/app/src/main/res/layout/fragment_autocomplete_address.xml
+++ b/app/src/main/res/layout/fragment_autocomplete_address.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,28 +10,29 @@
         android:id="@+id/autoCompleteTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/navi_place_name"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:textSize="30dp"
         android:drawableRight="@drawable/location"
-        android:hint="Wpisz adres" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/autoCompleteTextView"
-        android:src="@drawable/powered_by_google_light"
-        android:visibility="invisible"/>
+        android:hint="Wpisz adres"
+        android:textSize="30sp" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/save_address_button"
         android:layout_width="368dp"
         android:layout_height="64dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
         android:layout_below="@+id/autoCompleteTextView"
+        android:layout_centerHorizontal="true"
         android:text="@string/save" />
+
+    <EditText
+        android:id="@+id/navi_place_name"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:textSize="30sp"
+        android:ems="10"
+        android:hint="Tytuł" />
 
 </RelativeLayout>
