top toolbar changed ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#1d2570</color>
+    <color name="colorPrimaryDark">#181e5c</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000	</color>
     <color name="white">#FFFFFF</color>
@@ -9,4 +9,5 @@
     <color name="green">#33cc33</color>
     <color name="red">#FF0000</color>
     <color name="transparent">#80000000</color>
+
 </resources>
