--- a/app/src/main/res/layout/top_toolbar.xml
+++ b/app/src/main/res/layout/top_toolbar.xml
@@ -17,18 +17,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="60dp"
         android:orientation="horizontal"
         android:layout_marginLeft="0dp"
         android:weightSum="8">
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:text="@string/back"
-            android:textSize="16dp"
+            android:textSize="22dp"
+            android:textAllCaps="false"
             android:layout_weight="1"
             android:id="@+id/toolbarBackButton"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/white"
             android:background="@android:color/transparent"
             />
 
@@ -36,24 +40,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:lines="1"
             android:layout_weight="6"
             android:id="@+id/toolbarActivityTitle"
             android:textStyle="bold"
-            android:textSize="20sp"
-            android:textColor="@android:color/black"
+            android:layout_marginTop="5dp"
+            android:textSize="22sp"
+            android:textColor="@color/white"
             android:gravity="center"
             android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:textAllCaps="false"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:id="@+id/toolbar_save"
-            android:layout_marginRight="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="3dp"
             android:layout_alignParentRight="true"
             android:text="@string/save"
-            android:textSize="16dp"
+            android:textSize="22dp"
+            android:textColor="@color/white"
             android:background="@android:color/transparent"
             />
 
