--- a/app/src/main/res/layout/grid_menu_item.xml
+++ b/app/src/main/res/layout/grid_menu_item.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/crem">
+    android:gravity="center">
 
-    <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="4dp"
 
-        <ImageView
-            android:id="@+id/menu_item_icon"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/call_icon"
-            android:layout_gravity="bottom|right"/>
+        android:layout_gravity="center"
+        app:cardUseCompatPadding="true"
+        app:cardPreventCornerOverlap="true"
+        app:cardElevation="5dp"
+        android:id="@+id/menu_card_view">
 
-    </FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:id="@+id/sms_cell_background"
+            android:gravity="center">
 
-    <TextView
-        android:id="@+id/menu_item_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="25sp"
-        android:text="ZADZWON"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:paddingTop="10dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:gravity="center_horizontal"/>
+            <ImageView
+                android:id="@+id/menu_item_icon"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/call_icon" />
 
-</LinearLayout>
+
+            <TextView
+                android:id="@+id/menu_item_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="25sp"
+                android:text="ZADZWON"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:paddingTop="10dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp" />
+        </LinearLayout>
+
+
+    </android.support.v7.widget.CardView>
+
+
+</RelativeLayout>
