--- a/app/src/main/res/layout/top_toolbar.xml
+++ b/app/src/main/res/layout/top_toolbar.xml
@@ -17,7 +17,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="?attr/actionBarSize"
         android:orientation="horizontal"
         android:layout_marginLeft="0dp"
         android:weightSum="8">
