--- a/app/src/main/res/layout/activity_manu.xml
+++ b/app/src/main/res/layout/activity_manu.xml
@@ -28,6 +28,8 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:textSize="30dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:textStyle="bold"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
