messager list colors

--- a/app/src/main/res/drawable/sms_background_layout.xml
+++ b/app/src/main/res/drawable/sms_background_layout.xml
@@ -3,7 +3,8 @@
     android:shape="rectangle">
     <!-- View background color -->
     <solid
-        android:color="#FF6E00" >
+        android:color="@color/orangeTransparent50Proc">
+
     </solid>
 
     <!-- The radius makes the corners rounded -->
