--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#1d2570</color>
     <color name="colorPrimaryDark">#181e5c</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#1d2570</color>
     <color name="black">#000000	</color>
     <color name="white">#FFFFFF</color>
     <color name="crem">#fffdd0</color>
