--- a/app/src/main/res/layout/activity_push_dialog.xml
+++ b/app/src/main/res/layout/activity_push_dialog.xml
@@ -26,9 +26,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="23sp"
-                android:text="@string/popup_title"
+                android:text="@string/popup_title_yes_no"
                 android:textColor="@color/white"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:id="@+id/popup_title"/>
         </RelativeLayout>
 
         <TextView
