--- a/app/src/main/res/layout/activity_new_alarm.xml
+++ b/app/src/main/res/layout/activity_new_alarm.xml
@@ -4,23 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AlarmClock.NewAlarmActivity">
+    tools:context=".AlarmClock.NewAlarmActivity"
+    android:paddingLeft="6dip"
+    android:paddingTop="70dip"
+    android:paddingRight="6dip">
 
-    <RelativeLayout
-        android:layout_width="337dp"
-        android:layout_height="360dp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="152dp">
+
 
         <LinearLayout
+            android:paddingLeft="6dip"
+            android:paddingRight="6dip"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="horizontal">
-
+            <Button
+                android:id="@+id/leftalarm_button"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="10dp"
+                android:onClick="setFocusLeft"
+                android:rotation="270"
+                android:background="@drawable/shape_triangle" />
             <EditText
                 android:id="@+id/editText2"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignTop="@+id/editText"
                 android:ems="10"
@@ -30,7 +38,7 @@
 
             <EditText
                 android:id="@+id/editText"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:digits="0123456789"
                 android:layout_alignParentLeft="true"
@@ -51,7 +59,7 @@
 
             <EditText
                 android:id="@+id/editText5"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:digits="012345"
@@ -60,16 +68,23 @@
 
             <EditText
                 android:id="@+id/editText7"
-                android:layout_width="55dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
                 android:digits="0123456789"
                 android:inputType="number"
                 android:maxLength="1" />
+            <Button
+                android:id="@+id/rightalarm_button"
+                android:layout_width="55dp"
+                android:layout_height="55dp"
+                android:onClick="setFocusRight"
+                android:layout_marginBottom="10dp"
+                android:rotation="90"
+                android:background="@drawable/shape_triangle" />
+
 
         </LinearLayout>
-
-    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
