main screen for voice notes.

--- a/app/src/main/res/layout/activity_voice_notes_list.xml
+++ b/app/src/main/res/layout/activity_voice_notes_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".smsActivitys.MessagerListActivity"
-    android:id="@+id/sms_background">
+    tools:context=".VoiceNotes.VoiceNotesList"
+    android:id="@+id/voice_notes_background">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -19,8 +18,8 @@
             android:numColumns="2"
             android:verticalSpacing="5dp"
             android:horizontalSpacing="5dp"
-            android:id="@+id/sms_recycler_view"
-            android:layout_above="@id/sms_buttons_layout"
+            android:id="@+id/voice_notes_recycler_view"
+            android:layout_above="@id/voice_notes_buttons_layout"
             android:layout_marginBottom="5dp"
             android:scrollbars="vertical">
 
@@ -29,9 +28,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:id="@+id/sms_buttons_layout"
+            android:id="@+id/voice_notes_buttons_layout"
             android:orientation="horizontal"
-            android:weightSum="2"
+            android:weightSum="3"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             >
@@ -40,12 +39,25 @@
                 android:layout_height="80dp"
                 android:layout_weight="1"
                 android:textSize="30dp"
-                android:textAllCaps="false"
                 android:layout_marginRight="0dp"
                 android:layout_marginLeft="0dp"
+                android:textAllCaps="false"
                 android:textStyle="bold"
                 android:text="@string/wybierz"
-                android:id="@+id/sms_button_select"
+                android:id="@+id/voice_notes_button_select"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_weight="1"
+                android:textSize="30dp"
+                android:layout_marginRight="0dp"
+                android:layout_marginLeft="0dp"
+                android:textAllCaps="false"
+                android:textStyle="bold"
+                android:text="Graj"
+                android:id="@+id/voice_notes_play_stop"
                 />
 
             <Button
@@ -55,15 +67,13 @@
                 android:layout_marginLeft="0dp"
                 android:layout_marginRight="0dp"
                 android:textSize="30dp"
+                android:textAllCaps="false"
                 android:textStyle="bold"
                 android:text="@string/newS"
-                android:textAllCaps="false"
-                android:background="@color/green"
-                android:id="@+id/sms_button_delete"
+                android:id="@+id/voice_notes_button_delete"
                 />
         </LinearLayout>
 
 
     </RelativeLayout>
-
 </android.support.constraint.ConstraintLayout>
