--- a/app/src/main/res/layout/activity_autocomplete.xml
+++ b/app/src/main/res/layout/activity_autocomplete.xml
@@ -1,37 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".Navigation.AddAddressActivity">
+    android:layout_height="match_parent">
 
-    <AutoCompleteTextView
-        android:id="@+id/autoCompleteTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/navi_place_name"
-        android:layout_centerHorizontal="true"
-        android:hint="Wpisz adres"
-        android:textSize="30sp" />
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:orientation="vertical"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        tools:context=".Navigation.AddAddressActivity">
 
-    <Button
-        android:id="@+id/save_address_button"
-        android:layout_width="368dp"
-        android:layout_height="64dp"
-        android:layout_below="@+id/autoCompleteTextView"
-        android:layout_centerHorizontal="true"
-        android:text="@string/save" />
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <EditText
-        android:id="@+id/navi_place_name"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="21dp"
-        android:textSize="30sp"
-        android:ems="10"
-        android:hint="Tytuł" />
+            <EditText
+                android:id="@+id/navi_place_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:ems="10"
+                android:hint="Tytuł"
+                android:textSize="30sp" />
+        </android.support.design.widget.TextInputLayout>
 
-</RelativeLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_address"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Wpisz adres"
+                android:singleLine="true"
+                android:textSize="30sp" />
+        </android.support.design.widget.TextInputLayout>
+
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
